force-app/main/default/objects/ESS_Menu__c.object
<CustomObject>
    <fields>
        <fullName>Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approval</fullName>
                </value>
                <value>
                    <fullName>Personal Information</fullName>
                </value>
                <value>
                    <fullName>Time &amp; Benefit</fullName>
                </value>
                <value>
                    <fullName>Company Service</fullName>
                </value>
                <value>
                    <fullName>Learning</fullName>
                </value>
                <value>
                    <fullName>Workforce</fullName>
                </value>
                <value>
                    <fullName>Tracking Report</fullName>
                </value>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Master Data</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hide__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Icon_Name__c</fullName>
        <label>Icon Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Menu_Name__c</fullName>
        <label>Menu Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Noti_Color__c</fullName>
        <label>Noti Color</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Orange</fullName>
                </value>
                <value>
                    <fullName>Blue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Page_Url__c</fullName>
        <label>Page Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ESS Menu</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Group__c</columns>
        <columns>Menu_Name__c</columns>
        <columns>Icon_Name__c</columns>
        <columns>Noti_Color__c</columns>
        <columns>Page_Url__c</columns>
        <columns>Hide__c</columns>
        <columns>Delete__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Menu-{0000}</displayFormat>
        <label>ESS Menu</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>